<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroundimagepage"
    tools:context=".Activity.SingupActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:requiresFadingEdge="vertical"
        android:src="@drawable/backgroundimagepage"
        android:layout_marginBottom="100dp"/>

    <EditText
        android:id="@+id/etUsername"

        android:hint="@string/enterUserName"
        android:textStyle="bold"
        android:background="@drawable/enter_bg"
        android:layout_margin="15dp"
        android:layout_marginTop="100dp"
        android:inputType="text"
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="50dp">
    </EditText>
    <EditText
        android:id="@+id/etPassword"
        android:padding="10sp"
        android:layout_marginTop="10sp"
        android:layout_margin="15dp"
        android:background="@drawable/enter_bg"
        android:hint="@string/enterPassword"
        android:inputType="textPassword"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="50dp">
    </EditText>
    <EditText
        android:id="@+id/etCPassword"
        android:padding="10sp"
        android:layout_marginTop="10sp"
        android:layout_margin="15dp"
        android:background="@drawable/enter_bg"
        android:hint="@string/enterCPassword"
        android:inputType="textPassword"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="50dp">
    </EditText>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnSignup"
        android:layout_width="222dp"
        android:layout_height="61dp"
        android:textStyle="bold"
        android:textSize="25sp"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        android:textColor="@color/white"

        android:background="@drawable/button_bg"
        android:text="@string/signUp"
        />

</LinearLayout>