<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroundimagepage"
    tools:context=".Activity.LoginActivity">

    <!--    <ImageView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:requiresFadingEdge="vertical"
            android:src="@drawable/backgroundimagepage"
            android:layout_marginBottom="10dp"/>-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="175dp"
        android:orientation="vertical">


        <EditText
            android:id="@+id/etUsername"
            android:hint="@string/enterUserName"
            android:textStyle="bold"
            android:layout_margin="15dp"
            android:background="@drawable/enter_bg"
            android:layout_marginTop="400dp"
            android:inputType="text"
            android:layout_width="match_parent"
            android:layout_height="50dp">
        </EditText>
        <EditText
            android:id="@+id/etPassword"
            android:layout_marginTop="10sp"
            android:layout_margin="15dp"
            android:background="@drawable/enter_bg"
            android:hint="@string/enterPassword"
            android:inputType="textPassword"
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="50dp">
        </EditText>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnLogin"
            android:layout_width="wrap_content"
            android:textStyle="bold"
            android:layout_gravity="end"
            android:layout_marginEnd="20dp"
            android:textColor="@color/white"
            android:layout_height="wrap_content"
            android:background="@drawable/button_bg"
            android:text="@string/signIn"
            />
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnSignupRedirect"
            android:layout_width="match_parent"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="65dp"
            android:shadowRadius="@integer/material_motion_duration_long_1"
            android:textColor="@color/white"
            android:layout_height="wrap_content"
            android:background="@drawable/button_bg"
            android:text="@string/signUp"
            />
    </LinearLayout>

</LinearLayout>